# BeeX

./: .gitignore  README.md
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/: README.md  SOLUTION_README.md  bx_grid_world.cpp
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/docker/: task1_docker.sh
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/docker/include/opencv2/: opencv.hpp
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/ros_ws/src/driver/: CMakeLists.txt  package.xml
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/ros_ws/src/driver/test/: test_protocol_parsers.cpp
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/ros_ws/src/mission/: CMakeLists.txt  package.xml
Robotics Software Engineer Assignment/Interview Assignments/01 Mission Planning/task/tests/: run_local_tests.sh
Robotics Software Engineer Assignment/Interview Assignments/02 Machine Learning/task/: requirements-cpu.txt  requirements.txt  test_task1_ml.py
Robotics Software Engineer Assignment/Interview Assignments/02 Machine Learning/task/outputs_cpu_anode/: metrics.json
Robotics Software Engineer Assignment/Interview Assignments/03 Computer Vision/: answers.txt  test_task3_cv.py
submission/: SUBMISSION_README.md
submission/01 Mission Planning/task/: SOLUTION_README.md  bx_grid_world.cpp  compile.sh  docker-compose.yml
submission/01 Mission Planning/task/docker/: Dockerfile  task1_docker.sh
submission/01 Mission Planning/task/ros_ws/src/: CMakeLists.txt
submission/01 Mission Planning/task/ros_ws/src/driver/include/driver/: protocol.hpp
submission/01 Mission Planning/task/ros_ws/src/driver/src/: driver_node.cpp
submission/01 Mission Planning/task/ros_ws/src/mission/src/: mission_node.cpp
submission/02 Machine Learning/task/: SOLUTION_README.md  task1_ml.py
submission/02 Machine Learning/task/outputs_cpu_anode/: metrics.txt
submission/03 Computer Vision/: SOLUTION_README.md  task3_cv.py
tasks/: lessons.md  todo.md
